--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <title>Local Libary - Admin Dashboard</title>
 </head>
 
-<body>
+<body> {
+  background-image: books.jpg }
   <header class="container-fluid bg-light border-bottom">
     <nav class="row align-items-center">
       <h1 class="h4 px-3">Local Library</h1>
